<resources>
    <string name="app_name">Pocket-Assistant</string>
    <string name="title_home">Home</string>
    <string name="title_parameter">Informations médicales</string>
    <string name="title_contact">Contacts</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="start_detection">Démarrer la détection</string>

    <!-- Account -->
    <string name="surname">Nom</string>
    <string name="name">Prénom</string>
    <string name="allergies">Allergies</string>
    <string name="groupe_sanguin">Groupe sanguin</string>
    <string name="informations_importante">Informations importantes</string>
    <string name="m_dicaments_actuels">Médicaments actuels</string>
    <string name="pathologies">Pathologies</string>
    <string name="adresse">Adresse</string>
    <string name="rentrez_informations">Rentrez vos informations</string>
    <string name="validez">Validez</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="strvaluegyro">This are the value of the gyroscope</string>
    <string name="btnupdate">Update</string>
    <string name="x">X :</string>
    <string name="y">Y :</string>
    <string name="z">Z :</string>
    <string name="nameacc">Name :</string>
    <string name="d_marer_la_protection">Démarer la protection</string>
    <string name="demarer_la_protection">Demarer la protection</string>

    <string name="header_contact"><b>Contact list</b></string>
    <string name="subtitle1_contact">Default Contact</string>
    <string name="default1_name_contact">SAMU</string>
    <string name="default1_name_phone_number">15</string>
    <string name="default2_name_contact">Pompier</string>
    <string name="default2_name_phone_number">18</string>
    <string name="EndList_default_contact"> </string>
    <string name="subtitle2_contact">Other Contact</string>
    <string name="EndList_other_contact"> </string>
    <string name="Button_contact">Add a contact</string>
    <string name="item_name_contact">Enter his name</string>
    <string name="item_phone_number_contact">Enter his phone number :</string>
    <string name="Button_delete_All_contact">delete all added contacts</string>



</resources>