<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pocket_assistant.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_parameter"
        android:name="com.example.pocket_assistant.ui.parameter.ParameterFragment"
        android:label="@string/title_parameter"
        tools:layout="@layout/fragment_parameter" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.example.pocket_assistant.ui.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>